--- a/src/Winhance.WPF/Localization/el.json
+++ b/src/Winhance.WPF/Localization/el.json
@@ -1395,5 +1395,7 @@
   "Dialog_AdvancedPowerWarning_Message": "⚠️ Προειδοποίηση Προηγμένης Ρύθμισης Ενέργειας\n\nΑυτή η ρύθμιση δεν εκτίθεται κανονικά στις Επιλογές Ενέργειας των Windows και απαιτεί τροποποιήσεις μητρώου για πρόσβαση.\n\nΗ λανθασμένη τροποποίησή της μπορεί να προκαλέσει:\n• Αστάθεια συστήματος ή απροσδόκητη συμπεριφορά\n• Υποβάθμιση απόδοσης\n• Προβλήματα θερμικής διαχείρισης\n• Οι ρυθμίσεις ενδέχεται να μην λειτουργούν σε όλους τους τύπους CPU (σύγχρονες HWP έναντι παλαιότερων)\n\nΑλλάξτε το μόνο αν καταλαβαίνετε τη διαχείριση ενέργειας επεξεργαστή.\n\nΕίστε σίγουροι ότι θέλετε να τροποποιήσετε αυτή τη ρύθμιση;",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Να μην εμφανιστεί ξανά αυτή η προειδοποίηση για προηγμένες ρυθμίσεις ενέργειας",
   "Button_Unlock": "Ξεκλείδωμα",
-  "Common_ClickToUnlock": "Κάντε κλικ για ξεκλείδωμα"
+  "Common_ClickToUnlock": "Κάντε κλικ για ξεκλείδωμα",
+  "Setting_taskbar-copilot_Name": "Κουμπί Προεπισκόπησης Copilot",
+  "Setting_taskbar-copilot_Description": "Εμφάνιση ή απόκρυψη του κουμπιού Προεπισκόπησης Copilot στη γραμμή εργασιών"
 }
