--- a/src/Winhance.WPF/Localization/en.json
+++ b/src/Winhance.WPF/Localization/en.json
@@ -1395,5 +1395,7 @@
   "Dialog_AdvancedPowerWarning_Message": "⚠️ Advanced Power Setting Warning\n\nThis setting is not normally exposed in Windows Power Options and requires registry modifications to access.\n\nModifying it incorrectly may cause:\n• System instability or unexpected behavior\n• Performance degradation\n• Thermal management problems\n• Settings may not work on all CPU types (modern HWP vs legacy)\n\nOnly change this if you understand processor power management.\n\nAre you sure you want to modify this setting?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Don't show this warning again for advanced power settings",
   "Button_Unlock": "Unlock",
-  "Common_ClickToUnlock": "Click to unlock"
+  "Common_ClickToUnlock": "Click to unlock",
+  "Setting_taskbar-copilot_Name": "Copilot Preview Button",
+  "Setting_taskbar-copilot_Description": "Show or hide the Copilot Preview button on the taskbar"
 }
