--- a/src/Winhance.WPF/Localization/hi.json
+++ b/src/Winhance.WPF/Localization/hi.json
@@ -1395,5 +1395,7 @@
   "Dialog_AdvancedPowerWarning_Message": "⚠️ उन्नत पावर सेटिंग चेतावनी\n\nयह सेटिंग सामान्य रूप से विंडोज पावर विकल्पों में दिखाई नहीं देती है और इसे एक्सेस करने के लिए रजिस्ट्री संशोधनों की आवश्यकता होती है।\n\nइसे गलत तरीके से संशोधित करने से यह हो सकता है:\n• सिस्टम अस्थिरता या अप्रत्याशित व्यवहार\n• प्रदर्शन में गिरावट\n• थर्मल प्रबंधन समस्याएं\n• सेटिंग्स सभी CPU प्रकारों (आधुनिक HWP बनाम विरासत) पर काम नहीं कर सकती हैं\n\nकेवल तभी बदलें जब आप प्रोसेसर पावर प्रबंधन को समझते हों।\n\nक्या आप निश्चित रूप से इस सेटिंग को संशोधित करना चाहते हैं?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "उन्नत पावर सेटिंग्स के लिए यह चेतावनी फिर से न दिखाएं",
   "Button_Unlock": "अनलॉक",
-  "Common_ClickToUnlock": "अनलॉक करने के लिए क्लिक करें"
+  "Common_ClickToUnlock": "अनलॉक करने के लिए क्लिक करें",
+  "Setting_taskbar-copilot_Name": "कोपायलट पूर्वावलोकन बटन",
+  "Setting_taskbar-copilot_Description": "टास्कबार पर कोपायलट पूर्वावलोकन बटन दिखाएं या छिपाएं"
 }
