--- a/src/Winhance.WPF/Localization/it.json
+++ b/src/Winhance.WPF/Localization/it.json
@@ -1395,5 +1395,7 @@
   "Dialog_AdvancedPowerWarning_Message": "⚠️ Avviso di impostazione avanzata dell'alimentazione\n\nQuesta impostazione non è normalmente esposta nelle Opzioni risparmio energia di Windows e richiede modifiche al registro per accedervi.\n\nLa modifica errata può causare:\n• Instabilità del sistema o comportamento imprevisto\n• Degrado delle prestazioni\n• Problemi di gestione termica\n• Le impostazioni potrebbero non funzionare su tutti i tipi di CPU (HWP moderno vs legacy)\n\nModifica questo solo se comprendi la gestione dell'alimentazione del processore.\n\nSei sicuro di voler modificare questa impostazione?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Non mostrare più questo avviso per le impostazioni di alimentazione avanzate",
   "Button_Unlock": "Sblocca",
-  "Common_ClickToUnlock": "Fai clic per sbloccare"
+  "Common_ClickToUnlock": "Fai clic per sbloccare",
+  "Setting_taskbar-copilot_Name": "Pulsante anteprima Copilot",
+  "Setting_taskbar-copilot_Description": "Mostra o nascondi il pulsante di anteprima di Copilot sulla barra delle applicazioni"
 }
