--- a/src/Winhance.WPF/Localization/nl-BE.json
+++ b/src/Winhance.WPF/Localization/nl-BE.json
@@ -1395,5 +1395,7 @@
   "Dialog_AdvancedPowerWarning_Message": "⚠️ Waarschuwing Geavanceerde Energie-instelling\n\nDeze instelling wordt normaal niet getoond in Windows Energiebeheer en vereist registeraanpassingen om toegang te krijgen.\n\nOnjuist wijzigen kan veroorzaken:\n• Systeeminstabiliteit of onverwacht gedrag\n• Prestatievermindering\n• Problemen met thermisch beheer\n• Instellingen werken mogelijk niet op alle CPU-types (modern HWP vs legacy)\n\nWijzig dit alleen als u processor-energiebeheer begrijpt.\n\nWilt u zeker dat u deze instelling wilt wijzigen?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Toon deze waarschuwing niet opnieuw voor geavanceerde energie-instellingen",
   "Button_Unlock": "Ontgrendelen",
-  "Common_ClickToUnlock": "Klik om te ontgrendelen"
+  "Common_ClickToUnlock": "Klik om te ontgrendelen",
+  "Setting_taskbar-copilot_Name": "Copilot-voorbeeldknop",
+  "Setting_taskbar-copilot_Description": "De Copilot-voorbeeldknop op de taakbalk weergeven of verbergen"
 }
