--- a/src/Winhance.WPF/Localization/ru.json
+++ b/src/Winhance.WPF/Localization/ru.json
@@ -1395,5 +1395,7 @@
   "Dialog_AdvancedPowerWarning_Message": "⚠️ Предупреждение о расширенных настройках электропитания\n\nЭта настройка обычно не отображается в параметрах электропитания Windows и требует изменения реестра для доступа.\n\nНеправильное изменение может вызвать:\n• Нестабильность системы или неожиданное поведение\n• Снижение производительности\n• Проблемы с управлением температурой\n• Настройки могут не работать на всех типах ЦП (современные HWP по сравнению с устаревшими)\n\nИзменяйте это, только если вы понимаете управление питанием процессора.\n\nВы уверены, что хотите изменить эту настройку?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Не показывать это предупреждение снова для расширенных настроек электропитания",
   "Button_Unlock": "Разблокировать",
-  "Common_ClickToUnlock": "Нажмите, чтобы разблокировать"
+  "Common_ClickToUnlock": "Нажмите, чтобы разблокировать",
+  "Setting_taskbar-copilot_Name": "Кнопка предварительного просмотра Copilot",
+  "Setting_taskbar-copilot_Description": "Показать или скрыть кнопку предварительного просмотра Copilot на панели задач"
 }
