--- a/src/Winhance.WPF/Localization/pl.json
+++ b/src/Winhance.WPF/Localization/pl.json
@@ -1395,5 +1395,7 @@
   "Dialog_AdvancedPowerWarning_Message": "⚠️ Ostrzeżenie o zaawansowanych ustawieniach zasilania\n\nTo ustawienie nie jest normalnie dostępne w opcjach zasilania systemu Windows i wymaga modyfikacji rejestru, aby uzyskać do niego dostęp.\n\nNieprawidłowa modyfikacja może spowodować:\n• Niestabilność systemu lub nieoczekiwane zachowanie\n• Degradację wydajności\n• Problemy z zarządzaniem temperaturą\n• Ustawienia mogą nie działać na wszystkich typach procesorów (nowoczesne HWP vs starsze)\n\nZmieniaj to tylko, jeśli rozumiesz zarządzanie energią procesora.\n\nCzy na pewno chcesz zmodyfikować to ustawienie?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Nie pokazuj ponownie tego ostrzeżenia dla zaawansowanych ustawień zasilania",
   "Button_Unlock": "Odblokuj",
-  "Common_ClickToUnlock": "Kliknij, aby odblokować"
+  "Common_ClickToUnlock": "Kliknij, aby odblokować",
+  "Setting_taskbar-copilot_Name": "Przycisk podglądu Copilot",
+  "Setting_taskbar-copilot_Description": "Pokaż lub ukryj przycisk podglądu Copilot na pasku zadań"
 }
