--- a/src/Winhance.WPF/Localization/uk.json
+++ b/src/Winhance.WPF/Localization/uk.json
@@ -1395,5 +1395,7 @@
   "Dialog_AdvancedPowerWarning_Message": "⚠️ Попередження про розширені налаштування живлення\n\nЦе налаштування зазвичай не відображається в параметрах живлення Windows і вимагає змін у реєстрі для доступу.\n\nНеправильна зміна може спричинити:\n• Нестабільність системи або несподівану поведінку\n• Зниження продуктивності\n• Проблеми з керуванням температурою\n• Налаштування можуть не працювати на всіх типах ЦП (сучасні HWP проти застарілих)\n\nЗмінюйте це, лише якщо ви розумієте керування живленням процесора.\n\nВи впевнені, що хочете змінити це налаштування?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Більше не показувати це попередження для розширених налаштувань живлення",
   "Button_Unlock": "Розблокувати",
-  "Common_ClickToUnlock": "Натисніть, щоб розблокувати"
+  "Common_ClickToUnlock": "Натисніть, щоб розблокувати",
+  "Setting_taskbar-copilot_Name": "Кнопка попереднього перегляду Copilot",
+  "Setting_taskbar-copilot_Description": "Показати або приховати кнопку попереднього перегляду Copilot на панелі завдань"
 }
